Bug 85491 - FILEOPEN: break parameter incorrectly set in .XLSX import for horizontal text
Summary: FILEOPEN: break parameter incorrectly set in .XLSX import for horizontal text
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard:
Keywords: filter:ooxml
Depends on:
Blocks: OOXML-Chart
  Show dependency treegraph
 
Reported: 2014-10-26 19:01 UTC by Joey Reid
Modified: 2019-01-13 08:24 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Problem with default Break setting (XLS on Left and XLSX on right) (181.76 KB, image/png)
2014-10-26 19:01 UTC, Joey Reid
Details
Sample XLSX chart imported with overlapping labels (13.06 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2014-10-26 19:03 UTC, Joey Reid
Details
Sample XLS chart imported correctly (32.00 KB, application/vnd.ms-excel)
2014-10-26 19:04 UTC, Joey Reid
Details
screenshot 4.3.x vs 4.4.x (30.54 KB, image/png)
2014-10-27 05:28 UTC, tommy27
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Joey Reid 2014-10-26 19:01:56 UTC
Created attachment 108470 [details]
Problem with default Break setting (XLS on Left and XLSX on right)

Steps to reproduce:
1. Create a chart in Excel with long label names (2 or more lines)
2. Save as .XLS and .XLSX
3. Open in Calc
Note: no need to change any settings, just use all defaults.

When Calc imports Excel XLS charts, it correctly sets:
Text FLow:Break-enabled

But for XLSX charts it sets
Text FLow:Break-DISABLED

This causes as the labels in XLSX to overlap and makes them unreadable.
Comment 1 Joey Reid 2014-10-26 19:03:17 UTC
Created attachment 108471 [details]
Sample XLSX chart imported with overlapping labels
Comment 2 Joey Reid 2014-10-26 19:04:23 UTC
Created attachment 108472 [details]
Sample XLS chart imported correctly
Comment 3 tommy27 2014-10-27 05:28:25 UTC
Created attachment 108490 [details]
screenshot 4.3.x vs 4.4.x

@Joey
thanks 4 your report.
I tested it under Win7x64 using 4.3.2.2 and 4.4.0.0.alpha1+ (*)

if I save the provided XLS to XLSX and reload it, I see change in disposition of x axis labels.

however in 4.3.2 the orientation in 45° oblique with no overlap (however still different from original XLS format), whilst in 4.4.0.0+ it's horizontal with overlapping text

so the bug has different behaviour in 4.3.x and 4.4.x
see my screenshots
 
as an additional information, the XLSX saved by LibO are correctly displayed by MS Excel Viewer

(*) Build ID: 6ba8b7f5eacac969e4781d63718083a05491b1bc
TinderBox: Win-x86@42, Branch:master, Time: 2014-10-24_02:23:51
Comment 4 Luke 2015-02-19 02:41:52 UTC
Added markus.mohrhard@googlemail.com
Comment 5 Joey Reid 2015-02-20 06:55:55 UTC
With Sushil's patch for Bug 84647, both issues had been resolved in 4.4, but now we are back to using the wrong OOXML defaults for:

Text Flow:Overlap-enabled
Text FLow:Break-enabled

Could someone explain why we went back? Unless there's a good reason, could we please restore them? Thanks for looking into this!
Comment 6 Sushil Shinde 2015-02-20 07:37:27 UTC
I have merged two patches and resubmitted it.
Please review.
Link : https://gerrit.libreoffice.org/#/c/12213/
Comment 7 Joey Reid 2015-02-20 08:24:45 UTC
Sushil, 
Thanks for the update and all your help with this issue!
Comment 8 Markus Mohrhard 2015-02-23 00:55:03 UTC
(In reply to Joey Reid from comment #5)
> With Sushil's patch for Bug 84647, both issues had been resolved in 4.4, but
> now we are back to using the wrong OOXML defaults for:
> 
> Text Flow:Overlap-enabled
> Text FLow:Break-enabled
> 
> Could someone explain why we went back? Unless there's a good reason, could
> we please restore them? Thanks for looking into this!

As kohei explained in the commit where he reverted the change the patch is wrong as long as we don't also change the layouting algorithm:

http://cgit.freedesktop.org/libreoffice/core/commit/oox/source/drawingml/chart/axismodel.cxx?id=f281d2d24c2a368c58d32b1b50acf83e0f056d90
Comment 9 Joey Reid 2015-02-26 23:28:26 UTC
Markus and Sushil,
I was just confused because this bug had been fixed and then broken again with no mention on the tracker. Thanks for clearing that up.

The reason Kohei gave for reverting the commit was "to avoid overlapping of angled text label objects." Try attachment 108471 [details] in this report with BOTH of with Sushil's patches and you'll see that the correct defaults for FLow:Break-enabled at at least partially addresses the overlapping issue caused by Bug 84647.

I understand you want to be cautious with the stale and fresh builds, but shouldn't the master be using the correct defaults? That way developers are not trying to fix the layout algorithm when the root cause is incorrect defaults?

Thanks so much for your help with the labeling issue!
Comment 10 Joey Reid 2015-02-26 23:44:08 UTC
Are the edge cases that our layout engine can't handle documented? By using the correct defaults, we can help you identify them.
Comment 11 Joey Reid 2016-05-15 19:31:30 UTC
We are still ignoring the OOXML break parameter causing charts with long label names to render incorrectly.

Verified on: Version: 5.2.0.0.alpha1+
Build ID: 23ad336bfe61316b08f85e827b98fc593ac6908a
Comment 12 Xisco Faulí 2017-09-29 08:50:10 UTC Comment hidden (obsolete)
Comment 13 Luke 2018-08-09 05:06:21 UTC
Break parameter not imported causing chart to be incorrectly rendered in 
Version: 6.2.0.0.alpha0+
Build ID: 29306111ecaff2f66d4d53c990eef83cf97d1a65
Comment 14 Luke 2019-01-13 08:23:50 UTC
This report seems to be based on an incorrect assumption that XML tag in the OOXML standard which maps to the ODF Break parameter. 

The fix for Bug 122091 resolved this bug

https://cgit.freedesktop.org/libreoffice/core/commit/?id=015569fc919b


Thanks Balazs!