fdo#85491 : break parameter incorrectly set in .XLSX import.

1) TextBreak Parameter was bydefault 'false'.
 2) At xichart.cxx::convert() [line:2973] 'TextBreak'
    property was changed as per 'labelFreq' value.
 4) I have done same thing here and by doing this no existing
    unit test was failed.
 5) Added unit test to check 'TextBreak' value for chart.
Resubmitting :
fdo#84647 : Fixed default value for TickLableSkip value.

   1. 'TextCanOverlap' property was stored as false if TickLableSkip
      is not equal to one.
   2. For OOXML charts TickLableSkip can be between 1 to 999999999.
   3. We can not apply zero or less than zero  value to TickLableSkip.
      ( As per specification)
   4. In axis model default value for TickLableSkip was zero which is
      incorrect.
   5. Added unit test to check 'TextCanOverlap' property for chart.

Both fixes are related.

Conflicts:
	chart2/qa/extras/chart2import.cxx

Change-Id: I5d664867c982e48d2ff01363659282354822e541